[package]
name = "rust_clock_gui"
version = "1.0.2"
edition = "2021"

description = "Rust GUI Analog Clock application"
authors = ["Dariusz Makarewicz <darekmakarewicz1994@gmail.com>"]
license = "MIT"

[dependencies]
eframe = "0.31.1"
image = "0.25"
chrono = { version = "0.4.38", features = ["clock"] }
